--- a/test/IntegrationTests/IntegrationTests.csproj
+++ b/test/IntegrationTests/IntegrationTests.csproj
@@ -5,7 +5,7 @@
     <IsTestProject>true</IsTestProject>
     <RunSettingsFilePath>$(MSBuildProjectDirectory)\..\xunit.runsettings</RunSettingsFilePath>
     <OutputType>Exe</OutputType>
-    <RootNamespace>CodeCargo.NatsDistributedCache.IntegrationTests</RootNamespace>
+    <RootNamespace>CodeCargo.Nats.DistributedCache.IntegrationTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TestUtils\TestUtils.csproj" />
-    <ProjectReference Include="..\..\src\CodeCargo.NatsDistributedCache\CodeCargo.NatsDistributedCache.csproj" />
+    <ProjectReference Include="..\..\src\NatsDistributedCache\NatsDistributedCache.csproj" />
     <ProjectReference Include="..\..\util\NatsAppHost\NatsAppHost.csproj" />
   </ItemGroup>
 
