add conditional ContinuousIntegrationBuild
Signed-off-by: Caleb Lloyd <caleb@boxbuild.io>

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,6 +6,7 @@
     <LangVersion>latest</LangVersion>
     <NoWarn>$(NoWarn);SA0001</NoWarn>
     <IsPackable>false</IsPackable>
+    <ContinuousIntegrationBuild Condition="'$(CI)' == 'true'">true</ContinuousIntegrationBuild>
   </PropertyGroup>
 
   <ItemGroup>
