--- a/util/PerfTest/PerfTest.csproj
+++ b/util/PerfTest/PerfTest.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <IsPackable>false</IsPackable>
     <OutputType>Exe</OutputType>
-    <RootNamespace>CodeCargo.Nats.DistributedCache.PerfTest</RootNamespace>
+    <RootNamespace>CodeCargo.NatsDistributedCache.PerfTest</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
