--- a/src/NatsHybridCache/NatsHybridCache.csproj
+++ b/src/NatsHybridCache/NatsHybridCache.csproj
@@ -3,18 +3,18 @@
   <PropertyGroup>
     <IsPackable>true</IsPackable>
     <Nullable>enable</Nullable>
-    <RootNamespace>CodeCargo.NatsDistributedCache</RootNamespace>
-    <Description>NATS implementation of IDistributedCache.</Description>
+    <RootNamespace>CodeCargo.NatsHybridCache</RootNamespace>
+    <Description>Extensions for using HybridCache with NATS.</Description>
 
     <!-- Assembly signing (only if key file exists) -->
-    <SignAssembly Condition="Exists('$(MSBuildThisFileDirectory)..\..\keys\NatsDistributedCache.2025-05-12.snk')">true</SignAssembly>
-    <AssemblyOriginatorKeyFile Condition="Exists('$(MSBuildThisFileDirectory)..\..\keys\NatsDistributedCache.2025-05-12.snk')">$(MSBuildThisFileDirectory)..\..\keys\NatsDistributedCache.2025-05-12.snk</AssemblyOriginatorKeyFile>
+    <SignAssembly Condition="Exists('$(MSBuildThisFileDirectory)..\..\keys\CodeCargo.2025-05-12.snk')">true</SignAssembly>
+    <AssemblyOriginatorKeyFile Condition="Exists('$(MSBuildThisFileDirectory)..\..\keys\CodeCargo.2025-05-12.snk')">$(MSBuildThisFileDirectory)..\..\keys\NatsDistributedCache.2025-05-12.snk</AssemblyOriginatorKeyFile>
 
     <!-- NuGet metadata -->
     <Authors>CodeCargo</Authors>
     <Company>CodeCargo</Company>
     <Copyright>Copyright © $([System.DateTime]::Now.Year) CodeCargo</Copyright>
-    <PackageId>CodeCargo.NatsDistributedCache</PackageId>
+    <PackageId>CodeCargo.NatsHybridCache</PackageId>
     <PackageTags>distributed cache;hybrid cache;nats</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -28,11 +28,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.4" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.4" />
-    <PackageReference Include="NATS.Client.KeyValueStore" Version="2.6.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.4.0" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\NatsDistributedCache\NatsDistributedCache.csproj" />
   </ItemGroup>
 
   <ItemGroup>
