--- a/test/IntegrationTests/IntegrationTests.csproj
+++ b/test/IntegrationTests/IntegrationTests.csproj
@@ -5,7 +5,7 @@
     <IsTestProject>true</IsTestProject>
     <RunSettingsFilePath>$(MSBuildProjectDirectory)\..\xunit.runsettings</RunSettingsFilePath>
     <OutputType>Exe</OutputType>
-    <RootNamespace>CodeCargo.NatsDistributedCache.IntegrationTests</RootNamespace>
+    <RootNamespace>CodeCargo.Nats.DistributedCache.IntegrationTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
