--- a/test/TestUtils/TestUtils.csproj
+++ b/test/TestUtils/TestUtils.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <RootNamespace>CodeCargo.NatsDistributedCache.TestUtils</RootNamespace>
+    <RootNamespace>CodeCargo.Nats.DistributedCache.TestUtils</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
