--- a/test/UnitTests/UnitTests.csproj
+++ b/test/UnitTests/UnitTests.csproj
@@ -5,7 +5,7 @@
     <IsTestProject>true</IsTestProject>
     <RunSettingsFilePath>$(MSBuildProjectDirectory)\..\xunit.runsettings</RunSettingsFilePath>
     <OutputType>Exe</OutputType>
-    <RootNamespace>CodeCargo.NatsDistributedCache.UnitTests</RootNamespace>
+    <RootNamespace>CodeCargo.Nats.DistributedCache.UnitTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
