--- a/test/TestUtils/TestUtils.csproj
+++ b/test/TestUtils/TestUtils.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\NatsHybridCache\NatsHybridCache.csproj" />
+    <ProjectReference Include="..\..\src\NatsHybridCacheExtensions\NatsHybridCacheExtensions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
