--- a/util/ReadmeExample/ReadmeExample.csproj
+++ b/util/ReadmeExample/ReadmeExample.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.Testing" Version="9.2.1" />
-    <PackageReference Include="NATS.Net" Version="2.6.0" />
+    <PackageReference Include="NATS.Extensions.Microsoft.DependencyInjection" Version="2.6.0" />
   </ItemGroup>
 
   <ItemGroup>
